# franken_manim

./: .gitignore  AGENTS.md  COMPREHENSIVE_PLAN_FOR_THE_DESIGN_OF_FRANKEN_MANIM.md  Cargo.toml  README.md  SUITE_ALLOWLIST.tsv  UPSTREAM_LEDGER.md  rust-toolchain.toml
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml
crates/fmn-anim/: Cargo.toml
crates/fmn-anim/fixtures/: composition_alpha.txt  composition_timings.txt  sub_alpha.txt  succession_active.txt  time_spanned.txt
crates/fmn-anim/src/: animation.rs  clock.rs  composition.rs  creation.rs  fading.rs  frame.rs  growing.rs  indication.rs  lib.rs  movement.rs  purity.rs  rotation.rs  timeline.rs  transform.rs  transform_matching.rs  update.rs
crates/fmn-anim/tests/: animation.rs  clock.rs  composition.rs  creation.rs  fading.rs  frame_order.rs  indication.rs  movement.rs  purity.rs  timeline.rs  transform.rs  transform_matching.rs
crates/fmn-cache/: Cargo.toml
crates/fmn-cache/src/: entry.rs  key.rs  lib.rs  store.rs
crates/fmn-cache/tests/: store.rs  torture.rs
crates/fmn-cli/: Cargo.toml
crates/fmn-cli/src/: lib.rs  main.rs
crates/fmn-codec/: Cargo.toml
crates/fmn-codec/src/: checksum.rs  deflate.rs  gif.rs  inflate.rs  jpeg.rs  lib.rs  png.rs  wav.rs  y4m.rs
crates/fmn-codec/tests/: codec2.rs  deflate_inflate.rs  jpeg.rs  png.rs
crates/fmn-codec/tests/fixtures/: corpus.deflate  corpus.zlib  gen_jpeg_fixtures.py  gen_png_fixtures.py  gen_wav_fixtures.py
crates/fmn-codec/tests/fixtures/jpeg/: baseline_422.rgb  baseline_440.rgb  gray.rgb  orient3_be.rgb  orient6_le.rgb  progressive_420.rgb  progressive_444.rgb
crates/fmn-codec/tests/fixtures/png/: gray1.rgba  gray16.rgba  gray16_adam7.rgba  gray16_trns.rgba  gray2.rgba  gray4.rgba  gray8.rgba  gray8_trns.rgba  graya16.rgba  graya8.rgba  pal1.rgba  pal2.rgba  pal4.rgba  pal4_adam7.rgba  pal8.rgba  pal8_trns.rgba  rgb16.rgba  rgb8.rgba  rgb8_trns.rgba  rgba16.rgba  rgba8_adam7.rgba
crates/fmn-config/: Cargo.toml
crates/fmn-config/src/: config.rs  default_config.yml  lib.rs  packs.rs  yaml.rs
crates/fmn-config/tests/: config.rs
crates/fmn-config/tests/fixtures/: custom_config_3b1b.yml  every_shape.yml
crates/fmn-conformance/: Cargo.toml
crates/fmn-conformance/fixtures/npy/: MANIFEST.tsv  arc_full_n8.npy  arc_neg_third_n2.npy  arc_quarter_n4.npy  partial_quad.npy
crates/fmn-conformance/src/: closure.rs  golden.rs  lib.rs  npy.rs  ratchet.rs  tolerance.rs
crates/fmn-conformance/tests/: coverage_ratchet.rs  golden_rig.rs  governed_closure.rs  npy_interchange.rs  self_goldens.rs
crates/fmn-core/: Cargo.toml
crates/fmn-dmath/: Cargo.toml
crates/fmn-frame/: Cargo.toml
crates/fmn-frame/src/: buffer.rs  convert.rs  format.rs  half.rs  lib.rs  pool.rs  transfer.rs
crates/fmn-frame/tests/: convert.rs  layout_pool.rs
crates/fmn-geom/: Cargo.toml
crates/fmn-hash/: Cargo.toml
crates/fmn-hash/fixtures/: golden_v1_0.hex
crates/fmn-hash/src/: lib.rs  serial.rs  sha256.rs
crates/fmn-hash/tests/: golden.rs
crates/fmn-library/: Cargo.toml
crates/fmn-library/fixtures/: geometry.txt
crates/fmn-library/src/: arc.rs  lib.rs  line.rs  poly.rs  style.rs  tip.rs  vmobject.rs
crates/fmn-library/tests/: geometry_parity.rs
crates/fmn-mobject/: Cargo.toml
crates/fmn-output/: Cargo.toml
crates/fmn-output/src/: ffmpeg.rs  lib.rs  negotiate.rs
crates/fmn-output/tests/: boundary.rs
crates/fmn-platform/: Cargo.toml
crates/fmn-platform/fixtures/: sysfs_aarch64_biglittle.tsv  sysfs_x86_smt_ccd.tsv  topology_linux-x86_64.snapshot.txt
crates/fmn-platform/src/: clock.rs  fetch.rs  fs.rs  lib.rs  process.rs  topology.rs
crates/fmn-platform/tests/: capabilities.rs  topology.rs
crates/fmn-python/: Cargo.toml
crates/fmn-python/src/: lib.rs
crates/fmn-render/: Cargo.toml
crates/fmn-render/src/: lib.rs
crates/fmn-runtime/: Cargo.toml
crates/fmn-runtime/src/: lib.rs
crates/fmn-scene/: Cargo.toml
crates/fmn-scene/src/: journal.rs  lib.rs
crates/fmn-scene/tests/: journal.rs
crates/fmn-studio/: Cargo.toml
crates/fmn-studio/src/: lib.rs
crates/fmn-tex/: Cargo.toml
crates/fmn-tex/src/: engine.rs  error.rs  lib.rs  typeset.rs
crates/fmn-tex/tests/: fmd_math_surface.rs  scribe2.rs
crates/fmn-text/: Cargo.toml
crates/fmn-text/src/: error.rs  font.rs  layout.rs  lib.rs  maps.rs  markup.rs  shape.rs
crates/fmn-text/tests/: fmd_font_quadpath_roundtrip.rs  text_layout.rs
docs/: FFMPEG_PROTOCOL.md  GOVERNANCE.md  INPUT_CLOSURE.md  ROTATION_CONVENTIONS.md  wasm_audit.md
docs/adr/: 0001-the-rev4-contract.md  0002-d11-object-model-ratified.md  0003-dev-and-fuzz-dependency-tiers.md  0004-fmd-workspace-conversion.md  0005-extensible-delimiters-drawn-path-mainline.md  0006-textext-tier1-text-mode-surface.md  TEMPLATE.md
docs/behavior_notes/: BN-01-single-rng.md  BN-02-rational-clock.md  BN-03-true-arc-length.md  BN-04-color.md  BN-05-native-text-typesetting.md  BN-07-stroke-uniform-fixes.md  BN-07-updater-and-group-fixes.md  BN-08-animation-contract.md  BN-09-arc-density.md  BN-10-skip-mode-updater-time.md  BN-11-composition-timing.md
docs/g0/: G0-1-object-model-ratification.md  G0-3-fmd-math-ratification.md  (+2 more)
scripts/: capture_reference_imagery.py  check.sh  check_crate_dag.py  gen_anim_fixtures.py  gen_composition_fixtures.py  gen_copy_fixtures.py  gen_dmath_vectors.py  gen_geom_fixtures.py  gen_geometry_fixtures.py  gen_npy_fixtures.py  gen_positional_fixtures.py  gen_reference_fixtures.py  gen_rng_vectors.py  gen_space_ops_fixtures.py  harvest_tex_corpus.py
spikes/g0-1-object-model/: Cargo.toml
spikes/g0-1-object-model/src/: animate.rs  lib.rs  mobject.rs  record.rs  stage.rs
spikes/g0-1-object-model/tests/: scenarios.rs
spikes/g0-3-fmd-math/: Cargo.toml
spikes/g0-3-fmd-math/examples/: render_gallery.rs
spikes/g0-3-fmd-math/src/: layout.rs  lib.rs  metrics.rs  output.rs  parse.rs
spikes/g0-3-fmd-math/tests/: spike_constructs.rs
spikes/g0-5-python-ext/: Cargo.toml  run.sh
spikes/g0-5-python-ext/py/: bench_crossing.py  test_extensibility.py
spikes/g0-5-python-ext/src/: lib.rs
(+93 files in other folders)
