[package]
name = "fmn-anim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Choreo"

[dependencies]
fmn-core.workspace = true
fmn-dmath.workspace = true
fmn-hash.workspace = true
fmn-mobject.workspace = true

[lints]
workspace = true
