[package]
name = "fmn-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "YAML-subset parser, typed configuration, and the preamble-pack registry (§13.6)."

[dependencies]
fmn-core.workspace = true
fmn-hash.workspace = true

[lints]
workspace = true
