[package]
name = "fmn-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Gauntlet"

[dependencies]
fmn-core.workspace = true
fmn-hash.workspace = true
fmn-geom.workspace = true
fmn-mobject.workspace = true
fmn-anim.workspace = true
fmn-render.workspace = true
fmn-library.workspace = true
fmn-scene.workspace = true
fmn-output.workspace = true
# The Gauntlet consumes the pinned math engine to compute the public
# coverage ratchet (§11.5, fm-mol).
fmd-math.workspace = true

[lints]
workspace = true
