[package]
name = "fmn-hash"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Canonical hashing and versioned serialization for provenance and content addressing (§6.7)."

[dependencies]
fmn-core.workspace = true

[lints]
workspace = true
