[package]
name = "fmn-library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Menagerie + Atlas"

[dependencies]
fmn-core.workspace = true
fmn-geom.workspace = true
fmn-mobject.workspace = true
fmn-anim.workspace = true
fmn-text.workspace = true
fmn-tex.workspace = true

[lints]
workspace = true
