[package]
name = "fmn-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The PyO3 `manimlib` bridge"

[dependencies]
fmn-core.workspace = true
fmn-config.workspace = true
fmn-mobject.workspace = true
fmn-anim.workspace = true
fmn-library.workspace = true
fmn-scene.workspace = true

[lints]
workspace = true
