[package]
name = "fmn-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dual-mode runtime shims (house pattern); derives the ExecutionPlan from HardwareTopology (§17.4)."

[dependencies]
fmn-core.workspace = true
fmn-platform.workspace = true

[lints]
workspace = true
