[package]
name = "fmn-studio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Studio"

[dependencies]
fmn-core.workspace = true
fmn-platform.workspace = true
fmn-frame.workspace = true
fmn-codec.workspace = true
fmn-render.workspace = true
fmn-scene.workspace = true

[lints]
workspace = true
